@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+    <test-code>
+        <description><![CDATA[
+DotNoPrefixMethodParameters basic test case
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Foo {
+
+	public void m(String inParam) {}
+}
+     ]]></code>
+    </test-code>
+
+    <test-code>
+        <description><![CDATA[
+DotNoPrefixMethodParameters basic test case, no violation
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+
+	public void m(String param) {}
+}
+     ]]></code>
+    </test-code>
+
+    <test-code>
+        <description><![CDATA[
+DotNoPrefixMethodParameters basic test case, only one parameter is prefixed
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Foo {
+
+	public void m(String param, int outParam) {}
+}
+     ]]></code>
+    </test-code>
+
+    <test-code>
+        <description><![CDATA[
+DotNoPrefixMethodParameters limit: if parameters is named in or out, report a violation.
+     ]]></description>
+        <expected-problems>2</expected-problems>
+        <code><![CDATA[
+public class Foo {
+
+	public void m(String out, int in) {}
+}
+     ]]></code>
+    </test-code>
+
+</test-data>
