@@ -1,0 +1,50 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+    <test-code>
+        <description><![CDATA[
+ShortClassname basic test case
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Foo {
+
+}
+     ]]></code>
+    </test-code>
+
+    <test-code>
+        <description><![CDATA[
+ShortClassname basic test case 2 : More code and other declarations
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class NotFoo {
+
+	public void m() {
+		String bar;
+		int x;
+	}
+	
+	private class ValidName {
+	
+	}
+}
+     ]]></code>
+    </test-code>
+
+    <test-code>
+        <description><![CDATA[
+ShortClassname works with private classes.
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class YetAnotherFoo {
+	
+	private class bar {
+	
+	}
+}
+     ]]></code>
+    </test-code>
+
+</test-data>
