@@ -507,4 +507,32 @@ public boolean getFoo(boolean bar); // ok, unless checkParameterizedMethods=true
      ]]></example>
     </rule>
 
+    <rule 	name="ShortClassname"
+            since="5.0"
+            message="A Classname should have, at least, 5 characters"
+            class="net.sourceforge.pmd.lang.rule.XPathRule"
+          	externalInfoUrl="http://pmd.sourceforge.net/rules/naming.html#ShortClassName">
+        <description>
+        	<![CDATA[
+Detects if a classname if lower than 5 characters.
+			]]>
+        </description>
+        <priority>4</priority>
+          <properties>
+              <property name="xpath" pluginname="true">
+                  <value>
+                      <![CDATA[
+//ClassOrInterfaceDeclaration[string-length(@Image) < 5]
+                      ]]>
+                  </value>
+              </property>
+          </properties>
+        <example>
+    <![CDATA[
+public class Foo {
+}
+    ]]>
+        </example>
+      </rule>
+
 </ruleset>
